# Rust_exercism

./: .gitignore  Cargo.toml  README.md
a_short_fibonacci_sequence/src/: lib.rs  main.rs
assembly_line/src/: assembly_line.rs
gigasecond/: Cargo.toml
health_statistics/src/: lib.rs  test.rs
hello_world/src/: hello_world.rs  main.rs
low_power_embedded_game/src/: lib.rs
lucians_luscious_lasagna/src/: main.rs
resister_color/: Cargo.toml
resister_color/src/: lib.rs
reverse_string/src/: main.rs
semi_structured_logs/src/: lib.rs  main.rs
